--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "@babel/eslint-parser": "^7.14.4",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.7"
   }
