--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12"
   },
