--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "npm": "^7.16.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -49,14 +50,20 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-bootstrap": "^1.6.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.2.0",
+    "react-model": "^4.0.0",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.2",
+    "react-spring": "^9.0.0-rc.3",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
+    "styled-components": "^5.3.0",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
