--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@material-ui/core": "^4.11.4",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -32,8 +33,10 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
+    "firebase": "^8.6.5",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "i": "^0.3.6",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
